username and email change for local git

--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
     "nmkill": "./bin/index.js"
   },
   "keywords": [],
-  "author": "max ohsawa",
+  "author": "Max Ohsawa",
   "license": "MIT"
 }
